# triton

./: CMakeLists.txt
cmake/: AddTritonUnitTest.cmake
docs/backend/: mps.rst
include/triton/Dialect/Triton/IR/: TritonOps.td
include/triton/Dialect/TritonNvidiaGPU/IR/: TritonNvidiaGPUOps.td
lib/Dialect/Triton/IR/: Ops.cpp
lib/Dialect/TritonGPU/IR/: Dialect.cpp
lib/Dialect/TritonGPU/Transforms/: AccelerateMatmul.cpp
python/src/: ir.cc
python/test/unit/: test_mps_backend.py
python/triton/testing/backends/: test_mps_performance.py
python/tutorials/: 11-mps-backend.py
test/TritonGPU/: pipeline-lower-loop.mlir
test/TritonGPU/samples/: descriptor-matmul-pipeline.mlir
unittest/Analysis/: CMakeLists.txt  test_mps_backend.cpp
